fix for overflow long titles

--- a/html/tools/item_images/item_images.css
+++ b/html/tools/item_images/item_images.css
@@ -17,6 +17,7 @@ body{
     width: 70%;
     border:solid 1px gray;
     font-size: 83%;
+    overflow-y: auto;
 }
 
 #recentImages{
